syntax = "proto3";
option go_package = "./protobuf";

package protobuf;
service VideoStreamService {
  rpc GetVideoBuffer (Request) returns (Response) {}
}

message Request {
  int32 startTime_seconds = 1;
  int32 duration_seconds = 2;
}

message Response {
  bytes video_buffer = 1;
}